--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -18,7 +18,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>File Upload</title>
+    <title>Image Upscaling</title>
     <script src="{{ url_for('static', path='/js/jquery-3.6.0.js') }}"></script>
     <script src="{{ url_for('static', path='/js/helper.js') }}"></script>
     <script>
@@ -171,7 +171,7 @@
     </style>
 </head>
 <body>
-    <h1>File Upload</h1>
+    <h1>Image Upscaling</h1>
     
     <form id="upload-form" enctype="multipart/form-data">
         <input type="file" name="files" multiple>
